# medipy

./: CMakeLists.txt  ProjectHome.md  SConstruct  sample.hgignore
lib/medipy/gui/: CMakeLists.txt  SConstruct  __init__.py  cine_3d_dialog.py  colormap.py  colormaps.py  periodic_progress_dialog.py  review_dialog.py  utilities.py  viewer_3d.py  viewer_3d_frame.py  viewer_3d_tools.py  wxVTKRenderWindowInteractor.py
lib/medipy/io/: CMakeLists.txt  SConstruct  __init__.py  dicom_io.py  image_annotation.py  io.py  io_base.py  ipb.py  itkPyArrayFileReader.h  itkPyArrayFileReader.txx  itkPyArrayFileWriter.h  itkPyArrayFileWriter.txx  itk_io.py  nifti_io.py  nmr2D.py  raw.py  rbnmr.py  vtk_io.py  wx_image.py
lib/medipy/itk/: CMakeLists.txt  SConstruct  __init__.py  itkMatrixBridge.h  itkMatrixBridge.swg  itkMatrixBridge.txx  itkNumpyBridge.h  itkNumpyBridge.swg  itkNumpyBridge.txx  loader.py  numpy_bridge.py  types.py  wrap_itkNumpyBridge.cmake
lib/medipy/resources/: CMakeLists.txt  SConstruct
plugins/diffusion/: CMakeLists.txt  SConstruct  __init__.py  api.py  btkStreamlineTractographyAlgorithm.cxx  btkStreamlineTractographyAlgorithm.h  btkTractographyAlgorithm.cxx  btkTractographyAlgorithm.h  dtiParamItk.cpp  dtiParamItk.h  dtiParamItk.i  estimation.py  estimationWLS.py  estimation_2Alix.py  fiber_clustering.pyx  fiber_statistics.py  io.py  itkAxialDiffusivityImageFilter.h  itkBootstrapDWIStatisticsImageFilter.h  itkBootstrapDWIStatisticsImageFilter.txx  itkBootstrapParameterEstimationImageFilter.h  itkBootstrapParameterEstimationImageFilter.txx  itkComposeSpectralImageFilter.h  itkComposeSpectralImageFilter.txx  itkDTIScalarCalculator.h  itkDTIScalarCalculator.txx  itkDWIStatisticsImageFilter.h  itkDWIStatisticsImageFilter.txx  itkFractionalAnisotropyImageFilter.h  itkFractionalAnisotropyImageFilter.txx  itkLeastSquaresImageFilter.h  itkLeastSquaresImageFilter.txx  itkMeanDiffusivityImageFilter.h  itkMeanDiffusivityImageFilter.txx  itkParameterEstimationImageFilter.h  itkParameterEstimationImageFilter.txx  itkRadialDiffusivityImageFilter.h  itkSecondOrderSymmetricTensorReconstructionFilter.h  itkSecondOrderSymmetricTensorReconstructionFilter.txx  itkSecondOrderSymmetricTensorReconstructionFilter_2Alix.txx  (+36 more)
plugins/diffusion/gui/: __init__.py  tensor2_layer.py
plugins/diffusion/tests/: test_estimation.py  test_io.py  test_scalars.py  test_tractography.py  test_utils.py
plugins/hmc/: CMakeLists.txt  EM.cpp  EM.h  HMC.py  HMCInitializer.cpp  HMCInitializer.h  HiddenMarkovChainFilter.py  HiddenMarkovChainFilterConfig.py  HiddenMarkovChainFilterPython.py  HilbertCurveChainGenerator.cpp  HilbertCurveChainGenerator.h  HilbertCurveChainGenerator.txx  SConstruct  __init__.py  api.py  gui.py  itkHMCSegmentationImageFilter.cpp  itkHMCSegmentationImageFilter.h  itkHMCSegmentationImageFilter.txx  itkHiddenMarkovChainFilter.h  itkHiddenMarkovChainFilter.txx  itkHiddenMarkovChainFilterPython.py  itkHilbertPath.h  itkHilbertPath.hxx
plugins/hsqc/: CMakeLists.txt  DS.py  MCMC.py  Model.py  MyProject.komodoproject  SConstruct  SConstruct~  annotate.py  annotate.py~  api.py  changedettest.py  changes.py  conv.py  corps.py  dim.py  exept.txt~  fark.py  fonc_util.py  fun.py  func.py  gen_in.py  ham.py  inipeak.py  jareb.py  lawij.py  main_annotate.py  main_change.py  mass_load.py  ordon.py  rano.py  segmentation.i  segmentation.py  segmentation_wrap.cc  ser_xml.py  svdd.py  test.py  threshold.cpp  threshold.hpp  valid.py  xml_gen.py
plugins/hsqc/.svn/: all-wcprops  entries
plugins/hsqc/resources/: entete.txt
plugins/intensity/: CMakeLists.txt  __init__.py  api.py  itkJointHistogramCalculator.h  itkJointHistogramCalculator.txx  itkJointHistogramNormalizationFilter.h  itkJointHistogramNormalizationFilter.txx  itkJointHistogramTransferFunctionCalculator.h  itkJointHistogramTransferFunctionCalculator.swg  itkJointHistogramTransferFunctionCalculator.txx  itkTransformIntensityImageFilter.h  itkTransformIntensityImageFilter.txx  normalization.py  otsu.py  replace.py  threshold.py
plugins/intensity/tests/: test_replace.py
plugins/medimax/: CMakeLists.txt  SConstruct  config.h
plugins/medimax/detection/: CMakeLists.txt  SConstruct  __init__.py  api.py  detection.i  detection_anomalies_3d.c  detection_anomalies_3d.h  detection_fonctions_wrappees.c  detection_fonctions_wrappees.h  detection_interface.py
plugins/medimax/math/: ana_3d.c  ana_3d.h  imx_bspline.c  imx_bspline.h  imx_math.c  imx_math.h  imx_matrix.c  imx_matrix.h  oper_3d.c  oper_3d.h  operation.c  operation.h  type_traits.h
plugins/medimax/morpho/: morpho_3d.c  morpho_3d.h
plugins/medimax/noyau/: SConstruct  extern.h  global.c  gtkimagix.h  imagix.h  imx_2d.c  imx_2d.h  imx_3d.c  imx_3d.h  imx_defines.h  imx_lang.h  imx_tmp_grphic3d.h  imx_types.h  mani_3d.c  mani_3d.h  zone_3d.h
plugins/medimax/outils/: function_timer.h  imx_list.c  (+8 more)
plugins/region_growing/: CMakeLists.txt  SConstruct  __init__.py  api.py  connected_threshold.py  itkBinaryThresholdWithRadiusImageFunction.h  itkBinaryThresholdWithRadiusImageFunction.txx  itkConnectedThresholdWithRadiusImageFilter.h  itkConnectedThresholdWithRadiusImageFilter.txx  region_growing.xrc  region_growing_panel.py  wrap_itkConnectedThresholdWithRadiusImageFilter.cmake
plugins/segmentation/: CMakeLists.txt  SConstruct  __init__.py  api.py  bet.py  change_detection.py  itkBETImageFilter.h  itkBETImageFilter.txx  itkChangeDetectionClusteringImageFilter.h  itkChangeDetectionClusteringImageFilter.txx  itkClustersToAnnotationsCalculator.h  itkClustersToAnnotationsCalculator.txx  itkMonoModalStatisticalChangeDetectionImageFilter.h  itkMonoModalStatisticalChangeDetectionImageFilter.txx  label.py  skull.py  wrap_itkBETImageFilter.cmake  wrap_itkChangeDetectionClusteringImageFilter.cmake  wrap_itkClustersToAnnotationsCalculator.cmake  wrap_itkMonoModalStatiscialChangeDetectionImageFilter.cmake
plugins/visualization_3d/: CMakeLists.txt  SConstruct  __init__.py  api.py  decimation.py  marching_cubes.py  smoothing.py  texture.py  vtkNormalsByPlaneFitting.cpp  vtkNormalsByPlaneFitting.h
(+713 files in other folders)
