file(GLOB files "*.py")
install_py_files(${files})

file(GLOB files "resources/*")
foreach(file ${files})
    get_filename_component(leaf ${file} NAME)
    if(NOT ((${leaf} STREQUAL "CMakeLists.txt") OR (${leaf} STREQUAL "SConstruct")))
        file(RELATIVE_PATH destination ${CMAKE_SOURCE_DIR} ${file})
        get_filename_component(destination ${destination} PATH)
        install(FILES ${file} DESTINATION ${destination})
    endif()
endforeach(file)